# libcamera

include/libcamera/ipa/: rkisp1.mojom
src/ipa/libipa/: meson.build
src/ipa/libipa/algorithms/: af_hill_climbing.cpp  af_hill_climbing.h  af_interface.cpp  af_interface.h  meson.build
src/ipa/rkisp1/: ipa_context.h  rkisp1.cpp
src/ipa/rkisp1/algorithms/: af.cpp  af.h  meson.build
src/ipa/rkisp1/data/: imx258.yaml  meson.build  ov5675.yaml
src/libcamera/: ipa_manager.cpp
src/libcamera/pipeline/rkisp1/: rkisp1.cpp  rkisp1_path.cpp
